WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320595
[libpas] Fix a benign read from a deallocated TLC
https://bugs.webkit.org/show_bug.cgi?id=320595
Summary
[libpas] Fix a benign read from a deallocated TLC
Dan Hecht
Reported
2026-07-29 16:08:32 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-29 16:08:40 PDT
<
rdar://problem/183569873
>
Dan Hecht
Comment 2
2026-07-29 16:15:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70477
EWS
Comment 3
2026-07-30 09:19:50 PDT
Committed
318255@main
(90cbe5e85528): <
https://commits.webkit.org/318255@main
> Reviewed commits have been landed. Closing PR #70477 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug